# wyrelog

./: .gitignore  CLAUDE.md  LICENSE.md  meson.build  meson.options
subprojects/packagefiles/duckdb/: meson.build
subprojects/packagefiles/duckdb-amalgamated/: meson.build
subprojects/packagefiles/duckdb-prebuilt-osx/: meson.build
subprojects/packagefiles/duckdb-prebuilt-windows/: meson.build
tests/: check-client-audit-daemon.sh  check-no-daemon-policy-mutation-lock-self-test.sh  check-packaged-install-readiness.sh  check-wyctl-status-daemon.sh  check-wyrelogd-bootstrap-admin.sh  check-wyrelogd-conf-gate.sh  check-wyrelogd-datalog-product-flow.sh  check-wyrelogd-healthz.sh  check-wyrelogd-production-gates.sh  check-wyrelogd-profiles.sh  check-wyrelogd-startup-readiness.sh  fact-test-support.c  fact-test-support.h  meson.build  test-access-decision.c  test-audit-conn.c  test-audit-emit.c  test-audit-event.c  test-boot-smoke.c  test-break-glass-arm.c  test-break-glass-decide.c  test-break-glass-vocab.c  test-client-audit-daemon.c  test-client-smoke.c  test-daemon-auth-registry.c  test-daemon-bearer-resolver-exports.py  test-daemon-bearer-resolver-structure.py  test-daemon-checks.c  test-daemon-delta.c  test-daemon-http-decide.c  test-daemon-http-facts.c  test-daemon-http-guards-structure.py  test-daemon-http-guards.c  test-daemon-http-mfa.c  test-daemon-http-profile-events.c  test-daemon-mfa-validator.c  test-daemon-options.c  test-daemon-policy-write-authority-guard.py  test-daemon-service-credential-handoff.c  test-daemon-startup-recovery-boundary.py  (+106 more)
tests/fixtures/engine-io-templates/: bootstrap.dl
tools/: gst-indent  (+20 more)
wyrelog/: audit.h  break-glass.h  client.h  decide.h  engine.h  error.h  events.h  handle.h  meson.build  perm.h  session.h  version.h  wyl-access-decision.c  wyl-audit-conn-private.h  wyl-audit-conn.c  wyl-audit-event.c  wyl-audit-iter.c  wyl-boot-private.h  wyl-boot.c  wyl-client-codec-private.c  wyl-client-codec-private.h  wyl-client-private.h  wyl-client-url-private.c  wyl-client-url-private.h  wyl-client.c  wyl-common-private.h  wyl-decide.c  wyl-dl-static-private.h  wyl-dl-static.c  wyl-engine-private.h  wyl-engine.c  wyl-error.c  wyl-events-private.h  wyl-events.c  wyl-fsm-permission-scope-private.h  wyl-fsm-permission-scope.c  wyl-fsm-principal-private.h  wyl-fsm-principal.c  wyl-fsm-session-private.h  wyl-fsm-session.c  (+24 more)
wyrelog/access/: break-glass-private.h  break-glass.c  decision-private.h  decision.c
wyrelog/audit/: conn-private.h  conn.c  event-private.h  event.c  iter-private.h  iter.c
wyrelog/auth/: jwt-private.h  jwt.c  mfa-enrollment-private.h  mfa-enrollment.c  mfa-validator.c  mfa-validator.h  service-auth-coordination-private.h  service-auth-coordination.c  service-credential-domain-private.h  service-credential-domain.c  service-credential-handoff-delivery-private.c  service-credential-handoff-delivery-private.h  service-credential-operation-coordinator-auth-private.c  service-credential-operation-coordinator-auth-private.h  service-credential-operation-coordinator-cancel-private.c  service-credential-operation-coordinator-cancel-private.h  service-credential-operation-coordinator-execute-private.c  service-credential-operation-coordinator-execute-private.h  service-credential-operation-coordinator-fence-private.c  service-credential-operation-coordinator-fence-private.h  service-credential-operation-coordinator-journal-private.c  service-credential-operation-coordinator-journal-private.h  service-credential-operation-coordinator-maintenance-private.c  service-credential-operation-coordinator-maintenance-private.h  service-credential-operation-coordinator-private.c  service-credential-operation-coordinator-private.h  service-credential-operation-coordinator-proof-private.c  service-credential-operation-coordinator-proof-private.h  service-credential-operation-coordinator-recovery-private.c  service-credential-operation-coordinator-recovery-private.h  service-credential-operation-coordinator-remediate-private.c  service-credential-operation-coordinator-remediate-private.h  service-credential-operation-coordinator-retirement-private.c  service-credential-operation-coordinator-retirement-private.h  service-credential-operation-coordinator-status-private.c  service-credential-operation-coordinator-status-private.h  service-credential-operation-coordinator-storage-private.c  service-credential-operation-coordinator-storage-private.h  service-credential-operation-destination-private.c  service-credential-operation-destination-private.h  (+20 more)
wyrelog/daemon/: auth-registry-private.c  auth-registry-private.h  checks.c  checks.h  delta.c  delta.h  fact-status.c  fact-status.h  http-guards-private.c  http-guards-private.h  http.c  http.h  options.c  options.h  runtime.c  runtime.h  service-credential-handoff-private.c  service-credential-handoff-private.h  signals.c  signals.h  startup-recovery-private.c  startup-recovery-private.h  wyrelogd.c
wyrelog/fact/: compound-private.h  compound.c  graph-locator-private.c  graph-locator-private.h  graph-locator-windows-private.c  provisioning-private.c  provisioning-private.h  query-private.h  query.c  reconcile-private.c  reconcile-private.h  replay-private.h  replay.c  root-writer-lease-private.c  root-writer-lease-private.h  runtime-private.c  runtime-private.h  schema-private.h  schema.c  secure-duckdb-bridge-private.cc  secure-duckdb-bridge-private.h  secure-duckdb-bridge-windows-private.c  store-private.h  store.c
wyrelog/policy/: store-handoff-delivery-private.h  store-handoff-maintenance-private.h  store-handoff-retirement-private.h  store-lease-private.h  store-lease.c  store-private.h  store.c
wyrelog/wyctl/: org.wyrelog.wyctl.gschema.xml  wyctl-config.c  wyctl-config.h  wyctl-publication-backend-private.c  wyctl-publication-backend-private.h  wyctl-publication-posix-private.c  wyctl-publication-posix-private.h  wyctl-publication-private.c  wyctl-publication-private.h  wyctl-publication-windows-private.c  wyctl-publication-windows-private.h  wyctl-token-file.c  wyctl-token-file.h  wyctl.c
(+48 files in other folders)
